--- a/files/en-us/learn/server-side/django/deployment/index.html
+++ b/files/en-us/learn/server-side/django/deployment/index.html
@@ -13,7 +13,7 @@ tags:
 
 <div>{{PreviousMenuNext("Learn/Server-side/Django/Testing", "Learn/Server-side/Django/web_application_security", "Learn/Server-side/Django")}}</div>
 
-<p class="summary">Now you've created (and tested) an awesome <a href="/en-US/docs/Learn/Server-side/Django/Tutorial_local_library_website">LocalLibrary</a> website, you're going to want to install it on a public web server so that it can be accessed by library staff and members over the Internet. This article provides an overview of how you might go about finding a host to deploy your website, and what you need to do in order to get your site ready for production.</p>
+<p>Now you've created (and tested) an awesome <a href="/en-US/docs/Learn/Server-side/Django/Tutorial_local_library_website">LocalLibrary</a> website, you're going to want to install it on a public web server so that it can be accessed by library staff and members over the Internet. This article provides an overview of how you might go about finding a host to deploy your website, and what you need to do in order to get your site ready for production.</p>
 
 <table class="learn-box standard-table">
  <tbody>
@@ -107,8 +107,7 @@ tags:
 <p>The <a href="/en-US/docs/Learn/Server-side/Django/skeleton_website">Django skeleton website</a> created using the <em>django-admin</em> and <em>manage.py</em> tools are configured to make development easier. Many of the Django project settings (specified in <strong>settings.py</strong>) should be different for production, either for security or performance reasons.</p>
 
 <div class="notecard note">
-  <h4>Tip</h4>
-<p>It is common to have a separate <strong>settings.py</strong> file for production, and to import sensitive settings from a separate file or an environment variable. This file should then be protected, even if the rest of the source code is available on a public repository.</p>
+  <p><strong>Note:</strong> It is common to have a separate <strong>settings.py</strong> file for production, and to import sensitive settings from a separate file or an environment variable. This file should then be protected, even if the rest of the source code is available on a public repository.</p>
 </div>
 
 <p>The critical settings that you must check are:</p>
@@ -130,19 +129,20 @@ with open('/etc/secret_key.txt') as f:
 
 <p>Let's change the <em>LocalLibrary</em> application so that we read our <code>SECRET_KEY</code> and <code>DEBUG</code> variables from environment variables if they are defined, but otherwise use the default values in the configuration file.</p>
 
-<p>Open <strong>/locallibrary/settings.py</strong>, disable the original <code>SECRET_KEY</code> configuration and add the new lines as shown below in <strong>bold</strong>. During development no environment variable will be specified for the key, so the default value will be used (it shouldn't matter what key you use here, or if the key "leaks", because you won't use it in production).</p>
+<p>Open <strong>/locallibrary/settings.py</strong>, disable the original <code>SECRET_KEY</code> configuration and add the new lines as shown below.
+During development no environment variable will be specified for the key, so the default value will be used (it shouldn't matter what key you use here, or if the key "leaks", because you won't use it in production).</p>
 
 <pre class="brush: python"># SECURITY WARNING: keep the secret key used in production secret!
 # SECRET_KEY = "cg#p$g+j9tax!#a3cup@1$8obt2_+&amp;k3q+pmu)5%asj6yjpkag"
-<strong>import os</strong>
-<strong>SECRET_KEY = os.environ.get('DJANGO_SECRET_KEY', 'cg#p$g+j9tax!#a3cup@1$8obt2_+&amp;k3q+pmu)5%asj6yjpkag')</strong>
+import os
+SECRET_KEY = os.environ.get('DJANGO_SECRET_KEY', 'cg#p$g+j9tax!#a3cup@1$8obt2_+&amp;k3q+pmu)5%asj6yjpkag')
 </pre>
 
 <p>Then comment out the existing <code>DEBUG</code> setting and add the new line shown below.</p>
 
 <pre class="brush: python"># SECURITY WARNING: don't run with debug turned on in production!
 # DEBUG = True
-<strong>DEBUG = os.environ.get('DJANGO_DEBUG', '') != 'False'</strong>
+DEBUG = os.environ.get('DJANGO_DEBUG', '') != 'False'
 </pre>
 
 <p>The value of the <code>DEBUG</code> will be <code>True</code> by default, but will only be <code>False</code> if the value of the <code>DJANGO_DEBUG</code> environment variable is set to <code>False</code>. Please note that environment variables are strings and not Python types. We therefore need to compare strings. The only way to set the <code>DEBUG</code> variable to <code>False</code> is to actually set it to the string <code>False</code></p>
@@ -286,15 +286,13 @@ Changes to be committed:
 </ol>
 
 <div class="notecard warning">
-  <h4>Warning</h4>
-  <p>In 2020 Github change the default repo branch name to "main" (from "master"). If using an older/existing repository you might call <code>git push origin master</code> instead.</p>
+  <p><strong>Warning:</strong> In 2020 Github change the default repo branch name to "main" (from "master"). If using an older/existing repository you might call <code>git push origin master</code> instead.</p>
 </div>
 
 <p>When this operation completes, you should be able to go back to the page on Github where you created your repo, refresh the page, and see that your whole application has now been uploaded. You can continue to update your repository as files change using this add/commit/push cycle.</p>
 
 <div class="notecard note">
-  <h4>Tip</h4>
-  <p>This is a good point to make a backup of your "vanilla" project — while some of the changes we're going to be making in the following sections might be useful for deployment on any platform (or development) others might not.</p>
+  <p><strong>Note:</strong> This is a good point to make a backup of your "vanilla" project — while some of the changes we're going to be making in the following sections might be useful for deployment on any platform (or development) others might not.</p>
 
   <p>The <em>best</em> way to do this is to use <em>git</em> to manage your revisions. With <em>git</em> you can not only go back to a particular old version, but you can maintain this in a separate "branch" from your production changes and cherry-pick any changes to move between production and development branches. <a href="https://help.github.com/articles/good-resources-for-learning-git-and-github/">Learning Git</a> is well worth the effort, but is beyond the scope of this topic.</p>
 
@@ -433,7 +431,7 @@ STATIC_URL = '/static/'
 
 <pre>MIDDLEWARE = [
     'django.middleware.security.SecurityMiddleware',
-    <strong>'whitenoise.middleware.WhiteNoiseMiddleware',</strong>
+    'whitenoise.middleware.WhiteNoiseMiddleware',
     'django.contrib.sessions.middleware.SessionMiddleware',
     'django.middleware.common.CommonMiddleware',
     'django.middleware.csrf.CsrfViewMiddleware',
@@ -456,12 +454,13 @@ STATICFILES_STORAGE = 'whitenoise.storage.CompressedManifestStaticFilesStorage'
 
 <pre class="brush: bash">pip3 freeze &gt; requirements.txt</pre>
 
-<p>After installing all the different dependencies above, your <strong>requirements.txt</strong> file should have <em>at least</em> these items listed (though the version numbers may be different). Please delete any other dependencies not listed below, unless you've explicitly added them for this application.</p>
+<p>After installing all the different dependencies above, your <strong>requirements.txt</strong> file should have <em>at least</em> these items listed (though the version numbers may be different).
+Please delete any other dependencies not listed below, unless you've explicitly added them for this application.</p>
 
 <pre>dj-database-url==0.5.0
 Django==3.1.2
 gunicorn==20.0.4
-<strong>psycopg2-binary==2.8.6</strong>
+psycopg2-binary==2.8.6
 whitenoise==5.2.0
 </pre>
 
