--- a/files/en-us/learn/server-side/django/development_environment/index.html
+++ b/files/en-us/learn/server-side/django/development_environment/index.html
@@ -14,7 +14,7 @@ tags:
 
 <div>{{PreviousMenuNext("Learn/Server-side/Django/Introduction", "Learn/Server-side/Django/Tutorial_local_library_website", "Learn/Server-side/Django")}}</div>
 
-<p class="summary">Now that you know what Django is for, we'll show you how to set up and test a Django development environment on Windows, Linux (Ubuntu), and macOS — whatever common operating system you are using, this article should give you what you need to be able to start developing Django apps.</p>
+<p>Now that you know what Django is for, we'll show you how to set up and test a Django development environment on Windows, Linux (Ubuntu), and macOS — whatever common operating system you are using, this article should give you what you need to be able to start developing Django apps.</p>
 
 <table class="learn-box standard-table">
  <tbody>
@@ -355,8 +355,7 @@ py -3 -m django --version
 </div>
 
 <div class="notecard warning">
-  <h4>Important</h4>
-  <p>The rest of this <strong>module</strong> uses the <em>Linux</em> command for invoking Python 3 (<code>python3</code>) . If you're working on <em>Windows</em> replace this prefix with: <code>py -3</code></p>
+  <p><strong>Warning:</strong> The rest of this <strong>module</strong> uses the <em>Linux</em> command for invoking Python 3 (<code>python3</code>) . If you're working on <em>Windows</em> replace this prefix with: <code>py -3</code></p>
 </div>
 
 <h2 id="Testing_your_installation">Testing your installation</h2>
