--- a/files/en-us/learn/server-side/django/home_page/index.html
+++ b/files/en-us/learn/server-side/django/home_page/index.html
@@ -16,7 +16,7 @@ tags:
 
 <div>{{PreviousMenuNext("Learn/Server-side/Django/Admin_site", "Learn/Server-side/Django/Generic_views", "Learn/Server-side/Django")}}</div>
 
-<p class="summary">We're now ready to add the code that displays our first complete page — a home page for the <a href="/en-US/docs/Learn/Server-side/Django/Tutorial_local_library_website">LocalLibrary</a> website. The home page will show the number of records we have for each model type and provide sidebar navigation links to our other pages. Along the way we'll gain practical experience in writing basic URL maps and views, getting records from the database, and using templates.</p>
+<p>We're now ready to add the code that displays our first complete page — a home page for the <a href="/en-US/docs/Learn/Server-side/Django/Tutorial_local_library_website">LocalLibrary</a> website. The home page will show the number of records we have for each model type and provide sidebar navigation links to our other pages. Along the way we'll gain practical experience in writing basic URL maps and views, getting records from the database, and using templates.</p>
 
 <table class="learn-box standard-table">
  <tbody>
@@ -43,7 +43,7 @@ tags:
  <li>Templates to use when rendering data in the views.</li>
 </ul>
 
-<p><img alt="" src="basic-django.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="" src="basic-django.png"></p>
 
 <p>As you'll see in the next section, we have 5 pages to display, which is too much information to document in a single article. Therefore, this article will focus on how to implement the home page, and we'll cover the other pages in a subsequent article. This should give you a good end-to-end understanding of how URL mappers, views, and models work in practice.</p>
 
@@ -95,10 +95,11 @@ tags:
   <p><strong>Note:</strong> Whenever Django encounters the import function <code><a href="https://docs.djangoproject.com/en/3.1/ref/urls/#django.urls.include" title="django.conf.urls.include">django.urls.include()</a></code>, it splits the URL string at the designated end character and sends the remaining substring to the included <em>URLconf</em> module for further processing.</p>
 </div>
 
-<p>We also created a placeholder file for the <em>URLConf</em> module, named <strong>/catalog/urls.py</strong>. Add the following lines to that file: </p>
+<p>We also created a placeholder file for the <em>URLConf</em> module, named <strong>/catalog/urls.py</strong>.
+Add the following lines to that file: </p>
 
 <pre class="brush: python">urlpatterns = [
-<strong>    path('', views.index, name='index'),</strong>
+    path('', views.index, name='index'),
 ]</pre>
 
 <p>The <code>path()</code> function defines the following:</p>
@@ -108,9 +109,10 @@ tags:
  <li>A view function that will be called if the URL pattern is detected: <code>views.index</code>,  which is the function named <code>index()</code> in the <strong>views.py</strong> file. </li>
 </ul>
 
-<p>The <code>path()</code> function also specifies a <code>name</code> parameter, which is a unique identifier for <em>this</em> particular URL mapping. You can use the name to "reverse" the mapper, i.e.  to dynamically create a URL that  points to the resource that the mapper is designed to handle. For example, we can use the name parameter to link to our home page from any other page by adding the following link in a template:</p>
+<p>The <code>path()</code> function also specifies a <code>name</code> parameter, which is a unique identifier for <em>this</em> particular URL mapping. You can use the name to "reverse" the mapper, i.e.  to dynamically create a URL that  points to the resource that the mapper is designed to handle.
+For example, we can use the name parameter to link to our home page from any other page by adding the following link in a template:</p>
 
-<pre class="brush: html">&lt;a href="<strong>{% url 'index' %}</strong>"&gt;Home&lt;/a&gt;.</pre>
+<pre class="brush: html">&lt;a href="{% url 'index' %}"&gt;Home&lt;/a&gt;.</pre>
 
 <div class="notecard note">
   <p><strong>Note:</strong> We can hard code the link as in <code>&lt;a href="<strong>/catalog/</strong>"&gt;Home&lt;/a&gt;</code>), but if we change the pattern for our home page, for example, to <code>/catalog/index</code>) the templates will no longer link correctly. Using a reversed url mapping is more robust.</p>
@@ -186,7 +188,10 @@ def index(request):
 
 <p>Much of the HTML and navigation structure will be the same in every page of our site. Instead of duplicating boilerplate code on every page, you can use the Django templating language to declare a base template, and then extend it to replace just the bits that are different for each specific page. </p>
 
-<p>The following code snippet is a sample base template from a <strong>base_generic.html</strong> file. We'll be creating the template for LocalLibrary shortly. The sample below includes common HTML with sections for a title, a sidebar, and main contents marked with the named <code>block</code> and <code>endblock</code> template tags, shown in bold. You can leave the blocks empty, or include default content to use when rendering pages derived from the template.</p>
+<p>The following code snippet is a sample base template from a <strong>base_generic.html</strong> file.
+We'll be creating the template for LocalLibrary shortly.
+The sample below includes common HTML with sections for a title, a sidebar, and main contents marked with the named <code>block</code> and <code>endblock</code> template tags.
+You can leave the blocks empty, or include default content to use when rendering pages derived from the template.</p>
 
 <div class="notecard note">
   <p><strong>Note:</strong> Template <em>tags</em> are functions that you can use in a template to loop through lists, perform conditional operations based on the value of a variable, and so on. In addition to template tags, the template syntax allows you to reference variables that are passed into the template from the view, and use <em>template filters to</em> format variables (for example, to convert a string to lower case).</p>
@@ -195,11 +200,11 @@ def index(request):
 <pre class="brush: html">&lt;!DOCTYPE html&gt;
 &lt;html lang="en"&gt;
 &lt;head&gt;
-  <strong>{% block title %}</strong>&lt;title&gt;Local Library&lt;/title&gt;<strong>{% endblock %}</strong>
+  {% block title %}&lt;title&gt;Local Library&lt;/title&gt;{% endblock %}
 &lt;/head&gt;
 &lt;body&gt;
-  <strong>{% block sidebar %}</strong>&lt;!-- insert default navigation text for every page --&gt;<strong>{% endblock %}</strong>
-  <strong>{% block content %}</strong>&lt;!-- default content text (typically empty) --&gt;<strong>{% endblock %}</strong>
+  {% block sidebar %}&lt;!-- insert default navigation text for every page --&gt;{% endblock %}
+  {% block content %}&lt;!-- default content text (typically empty) --&gt;{% endblock %}
 &lt;/body&gt;
 &lt;/html&gt;
 </pre>
@@ -266,7 +271,8 @@ def index(request):
 
 <h4 id="The_index_template">The index template</h4>
 
-<p>Create a new HTML file <strong><em>index.html </em></strong>in <strong>/locallibrary/catalog/templates/</strong> and paste the following code in the file. This code extends our base template on the first line, and then replaces the default <code>content</code> block for the template. </p>
+<p>Create a new HTML file <strong><em>index.html </em></strong>in <strong>/locallibrary/catalog/templates/</strong> and paste the following code in the file.
+This code extends our base template on the first line, and then replaces the default <code>content</code> block for the template. </p>
 
 <pre class="brush: html">{% extends "base_generic.html" %}
 
@@ -276,26 +282,28 @@ def index(request):
   &lt;h2&gt;Dynamic content&lt;/h2&gt;
   &lt;p&gt;The library has the following record counts:&lt;/p&gt;
   &lt;ul&gt;
-    &lt;li&gt;&lt;strong&gt;Books:&lt;/strong&gt; <strong>\{{ num_books }}</strong>&lt;/li&gt;
-    &lt;li&gt;&lt;strong&gt;Copies:&lt;/strong&gt; <strong>\{{ num_instances }}</strong>&lt;/li&gt;
-    &lt;li&gt;&lt;strong&gt;Copies available:&lt;/strong&gt; <strong>\{{ num_instances_available }}</strong>&lt;/li&gt;
-    &lt;li&gt;&lt;strong&gt;Authors:&lt;/strong&gt; <strong>\{{ num_authors }}</strong>&lt;/li&gt;
+    &lt;li&gt;&lt;strong&gt;Books:&lt;/strong&gt; \{{ num_books }}&lt;/li&gt;
+    &lt;li&gt;&lt;strong&gt;Copies:&lt;/strong&gt; \{{ num_instances }}&lt;/li&gt;
+    &lt;li&gt;&lt;strong&gt;Copies available:&lt;/strong&gt; \{{ num_instances_available }}&lt;/li&gt;
+    &lt;li&gt;&lt;strong&gt;Authors:&lt;/strong&gt; \{{ num_authors }}&lt;/li&gt;
   &lt;/ul&gt;
 {% endblock %}</pre>
 
-<p>In the <em>Dynamic content</em> section we declare placeholders (<em>template variables</em>) for the information from the view that we want to include. The variables are enclosed with double brace (handlebars), as shown in bold in the code sample. </p>
+<p>In the <em>Dynamic content</em> section we declare placeholders (<em>template variables</em>) for the information from the view that we want to include.
+The variables are enclosed with double brace (handlebars).</p>
 
 <div class="notecard note">
   <p><strong>Note:</strong> You can easily recognize template variables and template tags (functions) - variables are enclosed in double braces (<code>\{{ num_books }}</code>), and tags are enclosed in single braces with percentage signs (<code>{% extends "base_generic.html" %}</code>).</p>
 </div>
 
-<p>The important thing to note here is that variables are named with the <em>keys</em> that we pass into the <code>context</code> dictionary in the <code>render()</code> function of our view (see sample below). Variables will be replaced with their associated <em>values</em> when the template is rendered.  </p>
+<p>The important thing to note here is that variables are named with the <em>keys</em> that we pass into the <code>context</code> dictionary in the <code>render()</code> function of our view (see sample below).
+Variables will be replaced with their associated <em>values</em> when the template is rendered.</p>
 
 <pre class="brush: python">context = {
-    '<strong>num_books</strong>': num_books,
-    '<strong>num_instances</strong>': num_instances,
-    '<strong>num_instances_available</strong>': num_instances_available,
-    '<strong>num_authors</strong>': num_authors,
+    'num_books': num_books,
+    'num_instances': num_instances,
+    'num_instances_available': num_instances_available,
+    'num_authors': num_authors,
 }
 
 return render(request, 'index.html', context=context)</pre>
@@ -333,7 +341,8 @@ return render(request, 'index.html', context=context)</pre>
 
 <h4 id="Configuring_where_to_find_the_templates">Configuring where to find the templates</h4>
 
-<p>The location where Django searches for templates is specified in the <code>TEMPLATES</code> object in the <strong>settings.py</strong> file. The default <strong>settings.py</strong> (as created for this tutorial) looks something like this:</p>
+<p>The location where Django searches for templates is specified in the <code>TEMPLATES</code> object in the <strong>settings.py</strong> file.
+The default <strong>settings.py</strong> (as created for this tutorial) looks something like this:</p>
 
 <pre class="brush: python">TEMPLATES = [
     {
@@ -363,7 +372,7 @@ return render(request, 'index.html', context=context)</pre>
 
 <p>At this point we have created all required resources to display the index page. Run the server (<code>python3 manage.py runserver</code>) and open <a href="http://127.0.0.1:8000/">http://127.0.0.1:8000/</a> in your browser. If everything is configured correctly, your site should look like the following screenshot.</p>
 
-<p><img alt="Index page for LocalLibrary website" src="index_page_ok.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Index page for LocalLibrary website" src="index_page_ok.png"></p>
 
 <div class="notecard note">
   <p><strong>Note:</strong> The <strong>All books</strong> and <strong>All authors</strong> links will not work yet because the paths, views, and templates for those pages are not defined. We just inserted placeholders for those links in the <code>base_generic.html</code> template.</p>
@@ -377,8 +386,7 @@ return render(request, 'index.html', context=context)</pre>
  <li>The LocalLibrary <a href="#the_locallibrary_base_template">base template</a> includes a <code>title</code> block. Override this block in the <a href="#the_index_template">index template</a> and create a new title for the page.
 
   <div class="notecard note">
-    <h4>Hint</h4>
-      <p>The section <a href="#extending_templates">Extending templates</a> explains how to create blocks and extend a block in another template.</p>
+    <p><strong>Note</strong> The section <a href="#extending_templates">Extending templates</a> explains how to create blocks and extend a block in another template.</p>
   </div>
  </li>
  <li>Modify the <a href="#view_(function-based)">view</a> to generate counts for <em>genres</em> and <em>books</em> that contain a particular word (case insensitive), and pass the results to the <code>context.</code> You accomplish this in a similar way to creating and using <code>num_books</code> and <code>num_instances_available</code>. Then update the <a href="#the_index_template">index template</a> to include these variables.<br>
