--- a/files/en-us/learn/server-side/django/skeleton_website/index.html
+++ b/files/en-us/learn/server-side/django/skeleton_website/index.html
@@ -16,7 +16,7 @@ tags:
 
 <div>{{PreviousMenuNext("Learn/Server-side/Django/Tutorial_local_library_website", "Learn/Server-side/Django/Models", "Learn/Server-side/Django")}}</div>
 
-<p class="summary">This second article in our <a href="/en-US/docs/Learn/Server-side/Django/Tutorial_local_library_website">Django Tutorial</a> shows how you can create a "skeleton" website project as a basis, which you can then populate with site-specific settings, paths, models, views, and templates.</p>
+<p>This second article in our <a href="/en-US/docs/Learn/Server-side/Django/Tutorial_local_library_website">Django Tutorial</a> shows how you can create a "skeleton" website project as a basis, which you can then populate with site-specific settings, paths, models, views, and templates.</p>
 
 <table class="learn-box standard-table">
  <tbody>
@@ -48,15 +48,17 @@ tags:
  <li>Hook up the <strong>url/path</strong> mapper for each application.</li>
 </ol>
 
-<p>For the <a href="/en-US/docs/Learn/Server-side/Django/Tutorial_local_library_website">Local Library website</a>, the website and project folders are named <em>locallibrary</em>, and includes one application named <em>catalog</em>. The top-level folder structure will therefore be as follows:</p>
+<p>For the <a href="/en-US/docs/Learn/Server-side/Django/Tutorial_local_library_website">Local Library website</a>, the website and project folders are named <em>locallibrary</em>, and includes one application named <em>catalog</em>.
+The top-level folder structure will therefore be as follows:</p>
 
-<pre class="brush: bash"><em>locallibrary/         # Website folder</em>
-    <strong>manage.py         </strong><em># Script to run Django tools for this project</em> (created using django-admin)
-    <em>locallibrary/     # Website/project folder </em>(created using django-admin)
-    <em>catalog/          # Application folder </em>(created using manage.py)
+<pre class="brush: bash">locallibrary/         # Website folder
+    manage.py         # Script to run Django tools for this project (created using django-admin)
+    locallibrary/     # Website/project folder (created using django-admin)
+    catalog/          # Application folder (created using manage.py)
 </pre>
 
-<p>The following sections discuss the process steps in detail, and show how you can test your changes. At the end of this article, we discuss other site-wide configuration you might also do at this stage.</p>
+<p>The following sections discuss the process steps in detail, and show how you can test your changes.
+At the end of this article, we discuss other site-wide configuration you might also do at this stage.</p>
 
 <h2 id="Creating_the_project">Creating the project</h2>
 
@@ -74,9 +76,9 @@ cd locallibrary</pre>
 
 <p>The <code>django-admin</code> tool creates a folder/file structure as follows:</p>
 
-<pre class="brush: bash"><em>locallibrary/</em>
+<pre class="brush: bash">locallibrary/
     manage.py
-    <em>locallibrary/</em>
+    locallibrary/
         __init__.py
         settings.py
         urls.py
@@ -115,21 +117,22 @@ cd locallibrary</pre>
   <p>If you are using Python 3.7.0 or later, you should only use  <code>py manage.py startapp catalog</code></p>
 </div>
 
-<p>The tool creates a new folder and populates it with files for the different parts of the application (shown in bold in the following example). Most of the files are named after their purpose (e.g. views should be stored in <strong>views.py</strong>, models in <strong>models.py</strong>, tests in <strong>tests.py</strong>, administration site configuration in <strong>admin.py</strong>, application registration in <strong>apps.py</strong>) and contain some minimal boilerplate code for working with the associated objects.</p>
+<p>The tool creates a new folder and populates it with files for the different parts of the application (shown in the following example).
+Most of the files are named after their purpose (e.g. views should be stored in <strong>views.py</strong>, models in <strong>models.py</strong>, tests in <strong>tests.py</strong>, administration site configuration in <strong>admin.py</strong>, application registration in <strong>apps.py</strong>) and contain some minimal boilerplate code for working with the associated objects.</p>
 
 <p>The updated project directory should now look like this:</p>
 
-<pre class="brush: bash"><em>locallibrary/</em>
+<pre class="brush: bash">locallibrary/
     manage.py
-    <em>locallibrary/
-</em><strong>    <em>catalog/</em>
+    locallibrary/
+    catalog/
         admin.py
         apps.py
         models.py
         tests.py
         views.py
         __init__.py
-        <em>migrations/</em></strong>
+        migrations/
 </pre>
 
 <p>In addition we now have:</p>
@@ -314,8 +317,8 @@ urlpatterns = [
 python3 manage.py migrate
 </pre>
 
-<div class="warning">
-<p><strong>Important</strong>: You'll need to run these commands every time your models change in a way that will affect the structure of the data that needs to be stored (including both addition and removal of whole models and individual fields).</p>
+<div class="notecard warning">
+<p><strong>Warning:</strong> You'll need to run these commands every time your models change in a way that will affect the structure of the data that needs to be stored (including both addition and removal of whole models and individual fields).</p>
 </div>
 
 <p>The <code>makemigrations</code> command <em>creates</em> (but does not apply) the migrations for all applications installed in your project. You can specify the application name as well to just run a migration for a single project. This gives you a chance to check out the code for these migrations before they are applied. If you're a Django expert, you may choose to tweak them slightly!</p>
