--- a/files/en-us/learn/server-side/express_nodejs/deployment/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/deployment/index.html
@@ -15,7 +15,7 @@ tags:
 
 <div>{{PreviousMenu("Learn/Server-side/Express_Nodejs/forms", "Learn/Server-side/Express_Nodejs")}}</div>
 
-<p class="summary">Now you've created (and tested) an awesome <a href="/en-US/docs/Learn/Server-side/Express_Nodejs/Tutorial_local_library_website">LocalLibrary</a> website, you're going to want to install it on a public web server so that it can be accessed by library staff and members over the Internet. This article provides an overview of how you might go about finding a host to deploy your website, and what you need to do in order to get your site ready for production.</p>
+<p>Now you've created (and tested) an awesome <a href="/en-US/docs/Learn/Server-side/Express_Nodejs/Tutorial_local_library_website">LocalLibrary</a> website, you're going to want to install it on a public web server so that it can be accessed by library staff and members over the Internet. This article provides an overview of how you might go about finding a host to deploy your website, and what you need to do in order to get your site ready for production.</p>
 
 <table class="learn-box standard-table">
  <tbody>
@@ -77,8 +77,7 @@ tags:
 <p>There are numerous hosting providers that are known to either actively support or work well with <em>Node</em> (and <em>Express</em>). These vendors provide different types of environments (IaaS, PaaS), and different levels of computing and network resources at different prices.</p>
 
 <div class="notecard note">
-  <h4>Tip</h4>
-  <p>There are a lot of hosting solutions, and their services and pricing can change over time. While we introduce a few options below, it is worth checking both these and other options before selecting a hosting provider.</p>
+  <p><strong>Note:</strong> There are a lot of hosting solutions, and their services and pricing can change over time. While we introduce a few options below, it is worth checking both these and other options before selecting a hosting provider.</p>
 </div>
 
 <p>Some of the things to consider when choosing a host:</p>
@@ -127,7 +126,9 @@ tags:
 
 <p>Logging calls can have an impact on a high-traffic website. In a production environment, you may need to log website activity (e.g. tracking traffic or logging API calls) but you should attempt to minimize the amount of logging added for debugging purposes.</p>
 
-<p>One way to minimize "debug" logging in production is to use a module like <a href="https://www.npmjs.com/package/debug">debug</a> that allows you to control what logging is performed by setting an environment variable. For example, the code fragment below shows how you might set up "author" logging. The debug variable is declared with the name 'author', and the prefix "author" will be automatically displayed for all logs from this object.</p>
+<p>One way to minimize "debug" logging in production is to use a module like <a href="https://www.npmjs.com/package/debug">debug</a> that allows you to control what logging is performed by setting an environment variable.
+For example, the code fragment below shows how you might set up "author" logging.
+The debug variable is declared with the name 'author', and the prefix "author" will be automatically displayed for all logs from this object.</p>
 
 <pre class="brush: js"><strong>var debug = require('debug')('author');</strong>
 
@@ -137,7 +138,7 @@ exports.author_update_get = function(req, res, next) {
     req.sanitize('id').escape().trim();
     Author.findById(req.params.id, function(err, author) {
         if (err) {
-<strong>            debug('update error:' + err);</strong>
+            debug('update error:' + err);
             return next(err);
         }
         //On success
@@ -156,8 +157,7 @@ export DEBUG="author,book"
 </pre>
 
 <div class="notecard note">
-  <h4>Challenge</h4>
-  <p>Calls to <code>debug</code> can replace logging you might previously have done using <code>console.log()</code> or <code>console.error()</code>. Replace any <code>console.log()</code> calls in your code with logging via the <a href="https://www.npmjs.com/package/debug">debug </a>module. Turn the logging on and off in your development environment by setting the DEBUG variable and observe the impact this has on logging.</p>
+  <p><strong>Note</strong> <strong>Challenge</strong> Calls to <code>debug</code> can replace logging you might previously have done using <code>console.log()</code> or <code>console.error()</code>. Replace any <code>console.log()</code> calls in your code with logging via the <a href="https://www.npmjs.com/package/debug">debug </a>module. Turn the logging on and off in your development environment by setting the DEBUG variable and observe the impact this has on logging.</p>
 </div>
 
 <p>If you need to log website activity you can use a logging library like <em>Winston</em> or <em>Bunyan</em>. For more information on this topic see: <a href="https://expressjs.com/en/advanced/best-practice-performance.html">Production best practices: performance and reliability</a>.</p>
@@ -173,14 +173,14 @@ export DEBUG="author,book"
 <p>Open <strong>./app.js</strong> and require the compression library as shown. Add the compression library to the middleware chain with the <code>use()</code> method (this should appear before any routes you want compressed — in this case, all of them!)</p>
 
 <pre class="brush: js">var catalogRouter = require('./routes/catalog'); //Import routes for "catalog" area of site
-<strong>var compression = require('compression');</strong>
+var compression = require('compression');
 
 // Create the Express application object
 var app = express();
 
 ...
 
-<strong>app.use(compression()); //Compress all routes</strong>
+app.use(compression()); //Compress all routes
 
 app.use(express.static(path.join(__dirname, 'public')));
 
@@ -204,15 +204,16 @@ app.use('/catalog', catalogRouter);  // Add catalog routes to middleware chain.
 <pre class="brush: bash">npm install helmet
 </pre>
 
-<p>Open <strong>./app.js</strong> and require the <em>helmet</em> library as shown. Then add the module to the middleware chain with the <code>use()</code> method.</p>
+<p>Open <strong>./app.js</strong> and require the <em>helmet</em> library as shown.
+Then add the module to the middleware chain with the <code>use()</code> method.</p>
 
 <pre class="brush: js">var compression = require('compression');
-<strong>var helmet = require('helmet');
-</strong>
+var helmet = require('helmet');
+
 // Create the Express application object
 var app = express();
 
-<strong>app.use(helmet())</strong>;
+app.use(helmet());
 ...</pre>
 
 <div class="notecard note">
@@ -324,8 +325,7 @@ Changes to be committed:
 </ol>
 
 <div class="notecard warning">
-  <h4>Warning</h4>
-  <p>In 2020 GitHub changed the default repo branch name to "main" (from "master"). If using an older/existing repository you might need to call <code>git push origin master</code> instead.</p>
+  <p><strong>Warning:</strong> In 2020 GitHub changed the default repo branch name to "main" (from "master"). If using an older/existing repository you might need to call <code>git push origin master</code> instead.</p>
 </div>
 
 <p>When this operation completes, you should be able to go back to the page on GitHub where you created your repo, refresh the page, and see that your whole application has now been uploaded. You can continue to update your repository as files change using this add/commit/push cycle.</p>
@@ -375,7 +375,7 @@ v12.18.4</pre>
 
 <pre class="brush: js">// Set up mongoose connection
 var dev_db_url = 'mongodb+srv://cooluser:coolpassword@cluster0-mbdj7.mongodb.net/local_library?retryWrites=true'
-var mongoDB = <strong>process.env.MONGODB_URI</strong> || dev_db_url;
+var mongoDB = process.env.MONGODB_URI || dev_db_url;
 </pre>
 
 <h4 id="Get_dependencies_and_re-test">Get dependencies and re-test</h4>
@@ -384,8 +384,7 @@ var mongoDB = <strong>process.env.MONGODB_URI</strong> || dev_db_url;
 
 <p>First, we will need to fetch our dependencies (you will recall we didn't copy the <strong>node_modules</strong> folder into our git tree). You can do this by running the following command in your terminal at the root of the project:</p>
 
-<pre class="brush: bash">npm install
-</pre>
+<pre class="brush: bash">npm install</pre>
 
 <p>Now run the site (see <a href="/en-US/docs/Learn/Server-side/Express_Nodejs/routes#testing_the_routes">Testing the routes</a> for the relevant commands) and check that the site still behaves as you expect.</p>
 
@@ -455,9 +454,11 @@ Setting NODE_ENV and restarting limitless-tor-18923... done, v13
 NODE_ENV: production
 </pre>
 
-<p>We should also use a separate database for production, setting its URI in the <strong>MONGODB_URI</strong>  environment variable. You can set up a new database and database-user exactly <a href="/en-US/docs/Learn/Server-side/Express_Nodejs/mongoose#setting_up_the_mongodb_database">as we did originally</a>, and get its URI. You can set the URI as shown (obviously, using your own URI!)</p>
+<p>We should also use a separate database for production, setting its URI in the <strong>MONGODB_URI</strong> environment variable.
+You can set up a new database and database-user exactly <a href="/en-US/docs/Learn/Server-side/Express_Nodejs/mongoose#setting_up_the_mongodb_database">as we did originally</a>, and get its URI.
+You can set the URI as shown (obviously, using your own URI!)</p>
 
-<pre class="brush: bash">&gt;heroku config:set <strong>MONGODB_URI</strong>=mongodb+srv://cooluser:coolpassword@cluster0-mbdj7.mongodb.net/local_library?retryWrites=true
+<pre class="brush: bash">&gt;heroku config:set MONGODB_URI=mongodb+srv://cooluser:coolpassword@cluster0-mbdj7.mongodb.net/local_library?retryWrites=true
 Setting MONGODB_URI and restarting limitless-tor-18923... done, v13
 MONGODB_URI: mongodb+srv://cooluser:coolpassword@cluster0-mbdj7.mongodb.net/local_library?retryWrites=true
 </pre>
