Shortened the code a little bit

--- a/files/en-us/learn/javascript/asynchronous/async_await/index.html
+++ b/files/en-us/learn/javascript/asynchronous/async_await/index.html
@@ -60,7 +60,7 @@ hello();</pre>
 
 <p>And you can use arrow functions:</p>
 
-<pre class="brush: js">let hello = async () =&gt; { return "Hello" };</pre>
+<pre class="brush: js">let hello = async () =&gt; "Hello"</pre>
 
 <p>These all do basically the same thing.</p>
 
